<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/button_signin"
            android:textSize="26sp"
            android:textColor="#0099cc"/>
     
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:text="@string/label_email"
        android:textColor="#0099cc" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:lines="1"
    	android:scrollHorizontally="true"
    	android:ellipsize="end"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/label_password"
        android:textColor="#0099cc" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:lines="1"
    	android:scrollHorizontally="true"
    	android:ellipsize="end"
        android:inputType="textPassword"
        android:textColor="#0099cc" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_signin"
        android:textColor="#0099cc"
        android:onClick="signInUser" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/label_newuser"
        android:textColor="#0099cc" />
    
     <Button
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_signup"
        android:textColor="#0099cc"
        android:onClick="loadSignUpActivity" />
     
      <Button
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_fbsignin"
        android:textColor="#0099cc"
        android:onClick="loadSignUpActivity" />
     
</LinearLayout>